[package]
name = "diesel-timescaledb"
version = "0.1.0"
edition = "2021"
authors = ["Hermes Team"]
description = "Diesel extensions for TimescaleDB functionality"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hermes-capital-io/hermes-platform"

[dependencies]
diesel = { version = "2.1", features = ["postgres", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4"

[features]
default = []